--- a/sass/latto.subtheme.base.scss
+++ b/sass/latto.subtheme.base.scss
@@ -128,7 +128,7 @@ header {
   ul {
     &.menu {
       border: none;
-      list-style: none;
+      list-style: disc inside none;
       text-align: left;
       /* LTR */
     }
